# Tact

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  design-reference.html  index.html  netlify.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
app/: __init__.py  auth.py  config.py  dependencies.py  firestore_repositories.py  legal_checks.py  main.py  oidc.py  policy.py  repositories.py  secrets.py  security.py  services.py
deploy/: cloud-run-service.yaml
handoffs/: 2026-06-29-auth-tenant.md  2026-06-29-firestore-secrets.md  2026-06-29-kill-switch-status.md  2026-06-29-legal-check-api.md  2026-06-29-measurement-read-models.md  2026-06-29-policy-auth-hardening.md  2026-06-29-server-audit.md  2026-06-29-ui-ms2-vite-vertical-slice.md  2026-06-29-ui-shell-design-system.md  2026-06-30-engine-simulation-allocation.md  2026-06-30-ms2-5-polish-pass.md  2026-06-30-ms3-generation-experience.md  2026-06-30-ms4-rich-dashboard.md  2026-06-30-ms5-role-separation.md  2026-06-30-ms6-production-hardening.md  2026-06-30-responsive-netlify-demo.md
prompts/: ttp_score.md
prototypes-notes/: 2026-06-30-codex-ms4-rich-dashboard-log.md  2026-06-30-codex-ms5-role-separation-log.md  2026-06-30-codex-ms6-production-hardening-log.md  2026-06-30-codex-responsive-netlify-log.md
scripts/: run-dummy.ts
src/: App.tsx  config.ts  content.ts  index.ts  styles.css  types.ts
state/: seen.json
tests/: test_adapters.py  test_audit.py  test_auth_tenant.py  test_campaigns.py  test_config.py  test_dashboard.py  (+10 more)
(+51 files in other folders)
